fix: text align

--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -101,3 +101,7 @@ p {
     font-weight: bold;
     font-size: 40px;
 }
+
+.howItWorksText {
+    word-break: normal;
+}
